<resources>
    <string name="app_name">Pra Assessment 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pra_ass_1">Pra Assessment 1</string>
    <string name="segitiga">Segitiga</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="masukkan_lebar">Masukan Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="luas_persegi">Luas Persegi Panjang</string>
    <string name="keliling_pp">Keliling Persegi Panjang</string>
    <string name="nilai">0</string>
    <string name="share">Bagikan</string>
    <string name="judulpp">PERSEGI PANJANG</string>
    <string name="judul_sgt">SEGITIGA</string>
    <string name="masukkan_alas">Masukkan Alas</string>
    <string name="masukkan_tinggi">Masukkan Tinggi</string>
    <string name="luas_segitiga">Luas Segitiga</string>
    <string name="kll_sgt">Keliling Segitiga</string>
    <string name="about_me">About Me</string>
    <string name="namaku">Arinda Meika Putri</string>
    <string name="nim">6706181039</string>
    <string name="kelas">D3IF-42-02</string>
</resources>
