<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline2"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.50121653"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tf_panjang" android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.033"
                android:hint="@string/masukkan_panjang" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textView6"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tf_lebar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tf_panjang" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/masukkan_lebar"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_Hitung" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tf_lebar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" style="@style/buttonKecil"/>
        <TextView
                android:text="@string/luas_persegi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_judulKllPP"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/bt_Hitung"/>
        <TextView
                android:text="@string/keliling_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/judulKelilingPP" app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/tv_judulKllPP"
                app:layout_constraintBottom_toBottomOf="@+id/tv_judulKllPP"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="center"/>
        <TextView
                android:text="@string/nilai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hasil_LuasPP" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_judulKllPP" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        <TextView
                android:text="@string/nilai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hasil_KelPP"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/hasil_LuasPP"
                app:layout_constraintBottom_toBottomOf="@+id/hasil_LuasPP"/>
        <Button
                android:text="@string/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btShare" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/hasil_LuasPP" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" style="@style/buttonKecil"/>
        <TextView
                android:text="@string/judulpp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" style="@style/judul"
                android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>