<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
        >
            <TextView
                    android:text="@string/pra_ass_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/judul" app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintVertical_bias="0.487"/>
            <Button
                    android:text="@string/segitiga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_fragmentSegitiga"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/buttonKecil" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"/>
            <Button
                    android:text="@string/persegi_panjang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_fragmentPP"
                    app:layout_constraintTop_toBottomOf="@+id/bt_fragmentSegitiga"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp" style="@style/buttonKecil"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>